--- a/02-python.ipynb
+++ b/02-python.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yuqoridagi qoidalarga amal qilgan holda faylga hello.py deb nom beramiz (siz istlagnahca nomalshingiz mumkin) va Save tugmasini bosamiz."
+    "Yuqoridagi qoidalarga amal qilgan holda faylga hello.py deb nom beramiz (siz istalgancha nomalshingiz mumkin) va Save tugmasini bosamiz."
    ]
   },
   {
@@ -224,9 +224,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})"
-      ],
+      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
